# C-QT-5

./: CMakeLists.txt  README.md  qt_calculator.cpp
